--- a/Makefile copy
+++ b/Makefile copy
@@ -8,8 +8,7 @@ qlrun:
 	g++ -lncurses -std=gnu++11  -stdlib=libc++ -Wall -g ql.cpp QL/Screen.h -o ql.o && ./ql.o
 
 qlrun1:
-	g++ -lncurses -std=gnu++11  -stdlib=libc++ -Wall -E ./QL/main.cpp ./QL/Screen.cpp ./QL/MObject.cpp > ql.cpp
-	g++ -lncurses -std=gnu++11  -stdlib=libc++ -g ql.cpp -o ql.o && ./ql.o
+	g++ -lncurses -std=gnu++11  -stdlib=libc++ -Wall -E QL/main.cpp QL/Screen.h QL/MObject.h 
 
 keysrun:
 	g++ -lncurses -std=gnu++11  -stdlib=libc++ -Wall -g keys.cpp -o keys.o && ./keys.o
